metadata-classic/objects/becquerel_customer_contact__x.object
<CustomObject>
    <description>becquerel__customer_contact</description>
    <externalDataSource>Becquerel</externalDataSource>
    <externalName>becquerel__customer_contact</externalName>
    <fields>
        <fullName>Contact__c</fullName>
        <externalDeveloperName>csc_usr_user_id</externalDeveloperName>
        <label>Contact</label>
        <length>50</length>
        <referenceTargetField>Contact.usr_user_id__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>becquerel__customer_contact</relationshipLabel>
        <relationshipName>becquerel_customer_contact</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>bid_bid_pk__c</fullName>
        <description>bid_bid_pk</description>
        <externalDeveloperName>bid_bid_pk</externalDeveloperName>
        <label>bid_bid_pk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bid_buyer_name__c</fullName>
        <description>bid_buyer_name</description>
        <externalDeveloperName>bid_buyer_name</externalDeveloperName>
        <label>bid_buyer_name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csc_bis_bid_status_change_id__c</fullName>
        <description>csc_bis_bid_status_change_id</description>
        <externalDeveloperName>csc_bis_bid_status_change_id</externalDeveloperName>
        <label>csc_bis_bid_status_change_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csc_charge_state__c</fullName>
        <description>csc_charge_state</description>
        <externalDeveloperName>csc_charge_state</externalDeveloperName>
        <label>csc_charge_state</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csc_customer_contact_id__c</fullName>
        <description>csc_customer_contact_id</description>
        <externalDeveloperName>csc_customer_contact_id</externalDeveloperName>
        <label>csc_customer_contact_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csc_first_event_type__c</fullName>
        <description>csc_first_event_type</description>
        <externalDeveloperName>csc_first_event_type</externalDeveloperName>
        <label>csc_first_event_type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csc_message_timestamp__c</fullName>
        <description>csc_message_timestamp</description>
        <externalDeveloperName>csc_message_timestamp</externalDeveloperName>
        <label>csc_message_timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>csc_num_cents__c</fullName>
        <description>csc_num_cents</description>
        <externalDeveloperName>csc_num_cents</externalDeveloperName>
        <label>csc_num_cents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csc_usr_user_id__c</fullName>
        <description>csc_usr_user_id</description>
        <externalDeveloperName>csc_usr_user_id</externalDeveloperName>
        <label>csc_usr_user_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>becquerel__customer_contact</label>
    <pluralLabel>becquerel__customer_contact</pluralLabel>
</CustomObject>